--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -113,6 +113,25 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12 text-center">
+                                    <img src="../../assets/reference/bara.webp" class="rounded" width="128px">
+                                    <h2>Barbora S.</h2>
+                                    <small class="text-muted">Zákaznice</small>
+                                    <p>
+                                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                        Jakub je obětavý workoholik. Moc dobře ví, co dělá a kdyby se náhodou<br>
+                                        někde vyskytla chyba, opraví jí okamžitě. Zvládá dobře kritiku a je ochoten uznat,<br>
+                                        že má někdo fajn nápad a zařídit se podle toho.<br>
+                                        U Kuby jste vždy v dobrých rukou.
+                                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </mdb-carousel-item>
+                    <mdb-carousel-item>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12 text-center">
                                     <img src="../../assets/reference/kastrol.webp" class="rounded" width="128px">
                                     <h2>Matouš Marek</h2>
                                     <small class="text-muted">Zakladatel serveru - KastrolCraft.cz</small>
