--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="d-flex flex-column justify-content-center" id="main">
     <div class="container aos-init aos-animate">
         <h1>Jakub Šarm</h1>
-        <span>{{ citat }}</span>
+        <span [innerHTML]="citat"></span>
         <br><br>
         <div class="socials">
             <ul class="social-network social-circle">
@@ -59,6 +59,62 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="d-flex flex-column justify-content-center" id="projekty">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 text-center page-title">
+                <h1>Projekty</h1>
+            </div>
+            <div class="col-md-12">
+                <div class="accordian">
+                    <ul>
+                        <li>
+                            <div class="image_title">
+                                <a href="#"><em>Připravuje se...</em></a>
+                            </div>
+                            <a href="#">
+                                <img src="../../assets/projekty/demo.jpg"/>
+                            </a>
+                        </li>
+                        <li>
+                            <div class="image_title">
+                                <a href="https://mythiaproject.eu/">Mythia Project</a>
+                            </div>
+                            <a href="https://mythiaproject.eu/">
+                                <img src="../../assets/projekty/mythia.jpg"/>
+                            </a>
+                        </li>
+                        <li>
+                            <div class="image_title">
+                                <a href="https://d-maso.cz/">D-Maso s.r.o.</a>
+                            </div>
+                            <a href="https://d-maso.cz/">
+                                <img src="../../assets/projekty/d-maso.jpg"/>
+                            </a>
+                        </li>
+                        <li>
+                            <div class="image_title">
+                                <a href="https://GamerHost.pro" target="_blank">GamerHost.pro</a>
+                            </div> 
+                            <a href="https://GamerHost.pro">
+                                <img src="../../assets/projekty/gamerhost.pro.jpg"/>
+                            </a>
+                        </li>
+                        <li>
+                            <div class="image_title">
+                                <a href="https://playinright.cz/">PlayInRight.cz</a>
+                            </div>
+                            <a href="https://playinright.cz/">
+                                <img src="../../assets/projekty/playinright.cz.jpg"/>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                
             </div>
         </div>
     </div>
@@ -192,11 +248,18 @@
 <section class="d-flex flex-column justify-content-center" id="zaver">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center">
+            <div class="col-md-12 text-center mb-3">
                 <h3>Jakub Šarm</h3>
                 <p>
                     Život by byl mnohem snazší, kdybychom k němu měli zdrojové kódy.
                 </p>
+                <div class="socials mb-3">
+                    <ul class="social-network social-circle mb-3">
+                        <li><a href="" target="_blank" class="icoInstagram" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="" target="_blank" class="icoFacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="" target="_blank" class="icoLinked" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
