--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,7 +99,7 @@ section#main {
     }
     #clouds {
         position: absolute;
-        bottom: -30px;
+        bottom: 0;
         left: 0;
         width: 100%;
         overflow: hidden;
@@ -168,8 +168,119 @@ section#zaver {
         font-size: 15px;
         font-style: italic;
         padding: 0;
-        margin: 0 0 40px 0;
+        margin: 0 0 15px 0;
     }
+    
+    .socials {
+        ul.social-network {
+        	list-style: none;
+        	display: inline;
+        	margin-left:0 !important;
+        	padding: 0;
+        }
+        ul.social-network li {
+        	display: inline;
+        	margin: 0 5px;
+        }
+        .social-network a.icoLinked:hover {
+        	background-color: #2867B2;
+        }
+        .social-network a.icoFacebook:hover {
+        	background-color:#3B5998;
+        }
+        .social-network a.icoInstagram:hover {
+        	background-color:#e1306c;
+        }
+        .social-network a.icoLinked:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoInstagram:hover i, .social-network a.icoTwitter:hover i {
+        	color:#fff;
+        }
+        a.socialIcon:hover, .socialHoverClass {
+        	color:#44BCDD;
+        }
+        .social-circle li a {
+        	display:inline-block;
+        	position:relative;
+        	margin:0 auto 0 auto;
+        	-moz-border-radius:50%;
+        	-webkit-border-radius:50%;
+        	border-radius:50%;
+        	text-align:center;
+        	width: 50px;
+        	height: 50px;
+        	font-size:20px;
+        }
+        .social-circle li i {
+        	margin:0;
+        	line-height:50px;
+        	text-align: center;
+        }
+
+        .social-circle li a:hover i, .triggeredHover {
+        	-moz-transform: rotate(360deg);
+        	-webkit-transform: rotate(360deg);
+        	-ms--transform: rotate(360deg);
+        	transform: rotate(360deg);
+        	-webkit-transition: all 0.2s;
+        	-moz-transition: all 0.2s;
+        	-o-transition: all 0.2s;
+        	-ms-transition: all 0.2s;
+        	transition: all 0.2s;
+        }
+        .social-circle i {
+        	color: var(--bs-body-color);;
+        	-webkit-transition: all 0.8s;
+        	-moz-transition: all 0.8s;
+        	-o-transition: all 0.8s;
+        	-ms-transition: all 0.8s;
+        	transition: all 0.8s;
+        }
+    }
+}
+
+section#projekty {
+    width: 100%;
+    min-height: 20vh;
+    .accordian {
+    	overflow: hidden;
+    }
+
+    .accordian ul {
+    	width: 1200px;
+    }
+
+    .accordian li {
+    	position: relative;
+    	display: block;
+    	width: 160px;
+    	float: left;
+    
+    	border-left: 1px solid #888;
+    
+    	transition: all 0.5s;
+    	-webkit-transition: all 0.5s;
+    	-moz-transition: all 0.5s;
+    }
+
+    .accordian ul:hover li {width: 40px;}
+    .accordian ul li:hover {width: 640px;}
+    .accordian li img {
+    	display: block;
+    }
+
+    .image_title {
+    	background: rgba(0, 0, 0, 0.5);
+    	position: absolute;
+    	left: 0; bottom: 0;	
+        width: 1280px;	
+    }
+    .image_title a {
+    	display: block;
+    	color: #fff;
+    	text-decoration: none;
+    	padding: 20px;
+    	font-size: 16px;
+    }
+
 }
 
 a {
