--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,7 +48,7 @@
                                 <i class="fa fa-chevron-right"></i><b>Telefon:</b> +420 775 567 240
                             </li>
                             <li>
-                                <i class="fa fa-chevron-right"></i><b>E-Mail:</b> Sarm<i class="fa fa-alt"></i>jakubsarm.eu
+                                <i class="fa fa-chevron-right"></i><b>E-Mail:</b> Sarm<i class="fa fa-at"></i>jakubsarm.eu
                             </li>
                             <li>
                                 <i class="fa fa-chevron-right"></i><b>Adresa:</b> Okrouhlá 35, 35002 Okrouhlá
