--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,52 +69,73 @@
             <div class="col-md-12 text-center page-title">
                 <h1>Projekty</h1>
             </div>
-            <div class="col-md-12">
-                <div class="accordian">
-                    <ul>
-                        <li>
-                            <div class="image_title">
-                                <a href="#"><em>Připravuje se...</em></a>
-                            </div>
-                            <a href="#">
-                                <img src="../../assets/projekty/demo.jpg"/>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="image_title">
-                                <a href="https://mythiaproject.eu/">Mythia Project</a>
-                            </div>
-                            <a href="https://mythiaproject.eu/">
-                                <img src="../../assets/projekty/mythia.jpg"/>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="image_title">
-                                <a href="https://d-maso.cz/">D-Maso s.r.o.</a>
-                            </div>
-                            <a href="https://d-maso.cz/">
-                                <img src="../../assets/projekty/d-maso.jpg"/>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="image_title">
-                                <a href="https://GamerHost.pro" target="_blank">GamerHost.pro</a>
-                            </div> 
-                            <a href="https://GamerHost.pro">
-                                <img src="../../assets/projekty/gamerhost.pro.jpg"/>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="image_title">
-                                <a href="https://playinright.cz/">PlayInRight.cz</a>
-                            </div>
-                            <a href="https://playinright.cz/">
-                                <img src="../../assets/projekty/playinright.cz.jpg"/>
-                            </a>
-                        </li>
-                    </ul>
+            <div class="col-md-4">
+                <div class="card mb-3">
+                    <img src="../../assets/projekty/gamerhost.pro.webp" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">GamerHost s.r.o.</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">PHP, TypeScript (Angular), MySQL, <small>HTML, SCSS, JS</small>, Bash</h6>
+                        <p class="card-text">
+                            Webová administrace pro nákup serverů a správu uživatelských účtů.
+                            Ticket systém na webu, VIP Systém pro nákup VIP ranků na servery.
+                            Seznam serverů s realtime refreshem dat.
+                        </p>
+                        <a href="https://gamerhost.pro/a/JakSar77" class="card-link">GamerHost.pro</a>
+                        <a href="https://vip.gamerhost.pro" class="card-link">vip.GamerHost.pro</a>
+                    </div>
                 </div>
-                
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-3">
+                    <img src="../../assets/projekty/d-maso.webp" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">D-Maso s.r.o.</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, JS</h6>
+                        <p class="card-text">
+                            Webová stránka s informacemi o společnosti a interaktivní mapou.
+                        </p>
+                        <a href="https://d-maso.cz/" class="card-link">D-Maso.cz</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-3">
+                    <img src="../../assets/projekty/playinright.cz.webp" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">PlayInRight.cz</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">PHP, TypeScript (Angular), MySQL</h6>
+                        <p class="card-text">
+                            Webová stránka s informacemi o minecraft serveru a vlastním banlist systémem. Web je zaměřený spíše na design.
+                        </p>
+                        <a href="https://playinright.cz/" class="card-link">PlayInRight.cz</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-3">
+                    <img src="../../assets/projekty/demo.webp" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">WP Hosting s.r.o.</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">PHP, JS, MySQL</h6>
+                        <p class="card-text">
+                            <em>Informace nejsou zatím veřejné...</em>    
+                        </p>
+                        <a href="https://www.wp-hosting.cz/" class="card-link">WP-Hosting.cz</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="card mb-3">
+                    <img src="../../assets/projekty/mythia.webp" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">MythiaProject</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">PHP, CSS, JS, MySQL</h6>
+                        <p class="card-text">
+                            Webový template pro herní portál MythiaProject. Vlastní banlist, zobrazování VIP výhod, seznam serverů atd...
+                        </p>
+                        <a href="https://mythiaproject.eu/" class="card-link">MythiaProject.eu</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -174,10 +195,10 @@
                                     <small class="text-muted">Zákaznice</small>
                                     <p>
                                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                        Jakub je obětavý workoholik. Moc dobře ví, co dělá a kdyby se náhodou<br>
+                                        Jakub je neuvěřitelně nadaný člověk, obětavý workoholik, je s ním radost spolupracovat<br>
+                                        a občas udělá cokoliv, aby dosáhl svého cíle. Moc dobře ví, co dělá a kdyby se náhodou<br>
                                         někde vyskytla chyba, opraví jí okamžitě. Zvládá dobře kritiku a je ochoten uznat,<br>
-                                        že má někdo fajn nápad a zařídit se podle toho.<br>
-                                        U Kuby jste vždy v dobrých rukou.
+                                        že má někdo fajn nápad a zařídit se podle toho. U Kuby jste vždy v dobrých rukou.
                                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                     </p>
                                 </div>
