--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,20 @@
+<nav>
+    <ul>
+        <li>
+            <a href="#main"><i class="fa fa-house"></i> Domů</a>
+        </li>
+        <li>
+            <a href="#about"><i class="fa fa-book"></i> O mně</a>
+        </li>
+        <li>
+            <a href="#projekty"><i class="fa fa-briefcase"></i> Projekty</a>
+        </li>
+        <li>
+            <a href="#reference"><i class="fa fa-users"></i> Reference</a>
+        </li>
+    </ul>
+</nav>
+
 <section class="d-flex flex-column justify-content-center" id="main">
     <div class="container aos-init aos-animate">
         <h1>Jakub Šarm</h1>
@@ -22,7 +39,7 @@
         </div>
         <div class="row justify-content-center items-align-center">
             <div class="col-md-4">
-                <img src="../../assets/me.webp" class="rounded" width="100%" alt="">
+                <img src="../../assets/me.webp" class="rounded profil-img" alt="">
             </div>
             <div class="col-md-8">
                 <h2>
@@ -285,6 +302,7 @@
         </div>
     </div>
 </section>
+
 <footer>
     <div class="container">
         <div class="row">
