--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,41 @@ body {
     line-height: 1.5;
 }
 
+nav {
+    position: fixed;
+    z-index: 1000;
+    height: 100%;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    justify-content: center;
+    ul {
+        padding: auto;
+        list-style: none;
+        li {
+            margin-right: 2rem;
+            margin-bottom: 1rem;
+            background-color: #c3473c;
+            color: #fff;
+            padding: 0.5rem 1rem;
+            border-radius: 10px;
+            a {
+                color: #fff;
+            }
+        }
+        li:first-child {
+            margin-top: 10rem;
+        }
+        li:hover {
+            background-color: #fff;
+            color: #c3473c;
+            a {
+                color: #c3473c;
+            }
+        }
+    }
+}
+
 section#main {
     width: 100%;
     height: 100vh;
@@ -99,7 +134,7 @@ section#main {
     }
     #clouds {
         position: absolute;
-        bottom: 0;
+        bottom: -2px;
         left: 0;
         width: 100%;
         overflow: hidden;
@@ -119,8 +154,13 @@ section#main {
 
 section#about {
     margin-top: 30px;
+    margin-bottom: 2rem;
     width: 100%;
     min-height: 75vh;
+    .profil-img {
+        width: 100%;
+        box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    }
     ul {
         list-style: none;
         padding: 0;
@@ -245,7 +285,7 @@ section#projekty {
         transition: all 0.2s ease;
     }
     .card:hover {
-        transform: scale(1.1);
+        transform: scale(1.05);
     }
 
 }
