--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -135,9 +135,9 @@
                         <h5 class="card-title">WP Hosting s.r.o.</h5>
                         <h6 class="card-subtitle mb-2 text-muted">PHP, JS, MySQL</h6>
                         <p class="card-text">
-                            <em>Informace nejsou zatím veřejné...</em>    
+                            Administrace pro správu VPS serverů a domén. S podporou subuserů a plné automatizace.
                         </p>
-                        <a href="https://www.wp-hosting.cz/" class="card-link">WP-Hosting.cz</a>
+                        <a href="https://www.wp-hosting.cz/administrace-serveru/" class="card-link">WP-Hosting.cz</a>
                     </div>
                 </div>
             </div>
