--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -91,7 +91,7 @@
                     <img src="../../assets/projekty/gamerhost.pro.webp" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">GamerHost s.r.o.</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">PHP, TypeScript (Angular), MySQL, <small>HTML, SCSS, JS</small>, Bash</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">PHP, Angular TS, MySQL, <small>HTML, SCSS, JS</small>, Bash</h6>
                         <p class="card-text">
                             Webová administrace pro nákup serverů a správu uživatelských účtů.
                             Ticket systém na webu, VIP Systém pro nákup VIP ranků na servery.
@@ -120,7 +120,7 @@
                     <img src="../../assets/projekty/playinright.cz.webp" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">PlayInRight.cz</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">PHP, TypeScript (Angular), MySQL</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">PHP, Angular TS, MySQL</h6>
                         <p class="card-text">
                             Webová stránka s informacemi o minecraft serveru a vlastním banlist systémem. Web je zaměřený spíše na design.
                         </p>
@@ -151,6 +151,19 @@
                             Webový template pro herní portál MythiaProject. Vlastní banlist, zobrazování VIP výhod, seznam serverů atd...
                         </p>
                         <a href="https://mythiaproject.eu/" class="card-link">MythiaProject.eu</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="card mb-3">
+                    <img src="../../assets/projekty/stoprussianweb.webp" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Russia DoS</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, JavaScript</h6>
+                        <p class="card-text">
+                            Nástroj pro DoSování stránek ruské válády a dalších webů na podporu Ukrajiny. 
+                        </p>
+                        <a href="https://stoprussianweb.eu/" class="card-link">StopRussianWeb.eu</a>
                     </div>
                 </div>
             </div>
