--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
-<header id="header" class="d-flex flex-column justify-content-center slideFromLeft">
+
+<i class="fa fa-list mobile-nav-toggle d-xl-none" id="mobile-nav" (click)="mobileMenu()"></i>
+
+<header id="header" class="d-flex flex-column justify-content-center">
 
     <nav id="navbar" class="navbar nav-menu">
         <ul>
