--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,25 +9,6 @@ body {
     font-weight: 400;
     line-height: 1.5;
 }
-header#header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 9997;
-    transition: all 0.5s;
-    padding: 15px;
-    overflow-y: auto;
-    animation: slideFromLeft 2s forwards;
-}
-@media (max-width: 992px) {
-    #header {
-        width: 300px;
-        background: #fff;
-        border-right: 1px solid #e6e9ec;
-        left: -300px;
-    }
-}
 
 .nav-menu {
     padding: 0;
@@ -103,10 +84,32 @@ header#header {
     display: block;
 }
 
+#header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 9997;
+    transition: all 0.5s;
+    padding: 15px;
+    overflow-y: auto;
+}
+@media (max-width: 992px) {
+    #header {
+        width: 300px;
+        background: #fff;
+        border-right: 1px solid #e6e9ec;
+        left: -300px;
+    }
+}
+
+/**
+* Mobile Navigation 
+*/
 .mobile-nav-toggle {
     position: fixed;
     right: 10px;
-    top: 10px;
+    top: 25px;
     z-index: 9998;
     border: 0;
     background: none;
@@ -116,22 +119,22 @@ header#header {
     line-height: 0;
     cursor: pointer;
     border-radius: 50px;
-    padding: 5px;
-}
-.mobile-nav-toggle i {
+    padding: 27px 18px;
+  }
+  .mobile-nav-toggle i {
     color: #45505b;
-}
-
-.mobile-nav-active {
-    overflow: hidden;
-}
-.mobile-nav-active #header {
+  }
+  
+  .mobile-nav-active {
+      overflow: hidden;
+  }
+  .mobile-nav-active #header {
     left: 0;
-}
-.mobile-nav-active .mobile-nav-toggle {
+  }
+  .mobile-nav-active .mobile-nav-toggle {
     color: #fff;
     background-color: #c3473c;
-}
+  }
 
 section#main {
     width: 100%;
@@ -422,3 +425,4 @@ footer {
     0% { top: -100%; }
     100% { top: 0; }
 }
+
