--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,8 +139,8 @@ body {
 section#main {
     width: 100%;
     height: 100vh;
-    background: url("./assets/background.webp");
-    background-position: center bottom;
+    background: linear-gradient(rgba(255,255,255,.01) 100%,rgba(255,255,255,.01) 0),url("./assets/background.webp"),#fff;
+    background-position: center 80%;
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -407,6 +407,9 @@ footer {
     text-align: center;
 }
 
+.sh {
+    filter: drop-shadow(5px 5px 5px #000);
+}
 
 
 @keyframes slideFromLeft {
